# climate-sim

./: .gitignore  Cargo.toml  README.md
labb-förbränning/: rapport.tex
report/: count.py  notes_about_plots.md  refs.bib  report.tex  report.toc
report/assets/: .gitattributes
sim/: Cargo.toml
sim/src/: consts.rs  energy_diff.rs  energy_in.rs  main.rs  planet.rs  projection.rs  rk4.rs  sampling.rs  temp.rs  view.rs
sim/src/shaders/: projection.wgsl
src/: main.rs  rk4.rs
